# roux

./: .gitignore  Cargo.toml  README.md
examples/: broken.rs  readonly.rs  subreddit.rs  subreddits.rs  user_submissions.rs
examples/readonly/src/: main.rs
examples/subreddit/: Cargo.toml
examples/subreddit/src/: main.rs
examples/subreddits/src/: main.rs
src/: client.rs  config.rs  lib.rs
src/me/: mod.rs
src/requests/: mod.rs
src/subreddit/: mod.rs
src/subreddit/responses/: submissions.rs  subreddits.rs
src/user/: mod.rs
tests/: tests.rs
