[package]
name = "ruhroux"
version = "1.0.0-alpha.0"
authors = ["Caige Nichols <caigesn@gmail.com>", "Justin Duch <justin@duch.me>"]
edition = "2018"
license = "MIT"
description = "Simple and asyncronous Reddit API client"
readme = "README.md"
documentation = "https://docs.rs/ruhroux"
repository = "https://github.com/caiges/ruhroux"
keywords = ["reddit", "api", "async"]
categories = ["authentication", "api-bindings", "network-programming"]
exclude = [".circle/*", ".gitignore"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "gzip", "rustls-tls"]
optional = true

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"

[badges]
circle-ci = { repository = "halcyonnouveau/roux.rs" }

[features]
default = ["tokio_new"]
tokio_new = ["reqwest"]
